tooling/base/gha-runners/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gha-runner-scale-set
spec:
  description: "Restrict internal traffic to the GitHub Actions runner scale set."
  endpointSelector:
    matchExpressions:
      - key: k8s:actions.github.com/scale-set-name
        operator: In
        values:
          - default-gha-runner-scale-set
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
